Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
     <section id="contact" aria-label="Contact Anil Mahadev">
       <h2>Contact</h2>
       <p>Reach out to discuss technology architecture, collaborations, or creative projects.</p>
-      <p>Email: <a href="mailto:anil@example.com">anil@example.com</a> | LinkedIn: <a href="https://www.linkedin.com/in/anilmahadev" target="_blank" rel="noopener noreferrer">anilmahadev</a></p>
+      <p>Email: <a href="mailto:anilmaz2024@gmail.com">Email me</a> | LinkedIn: <a href="https://www.linkedin.com/in/anilmahadev" target="_blank" rel="noopener noreferrer">anilmahadev</a></p>
     </section>
   </main>
 </div>
