Update links for music and movie showcases

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <section id="music" aria-label="Music and AI Movies Showcase">
       <h2>Music &amp; Movie Ring</h2>
       <p>Creative side projects include EDM music production and AI-generated horror movie video creations.</p>
-      <p><a href="#">Listen to my EDM tracks</a> | <a href="#">Watch AI Horror movies</a></p>
+      <p><a href="https://soundcloud.com/aniltexascowboy">Listen to my EDM tracks</a> | <a href="https://www.youtube.com/@TwistedCarousel">Watch AI Horror movies</a></p>
     </section>
 
     <section id="contact" aria-label="Contact Anil Mahadev">
